# spmn

./: .gitignore  .gitmodules  DEBIAN_control  Dockerfile  Makefile  PKGBUILD  README.md  compile_commands.json  configure.ac  deb-build.sh  descfile.8C3SKP  descfile.Ym2izc  descfile.YsT7nT  descfile.cszeJf  dwm-pango-6.0.diff  main.c  spm.1  spm1  x86_64-repodata  xbps-create.sh
experimental/: multithreaded-search-template.h
include/: def.h  deftypes.h  errhandle.h
include/commands/: apply.h  download.h  open.h  runsearch.h  search.h  sync.h
include/utils/: entry-utils.h  logutils.h  pathutils.h
packaging/deb/: DEBIAN_control  Dockerfile  Makefile  deb-build.sh
packaging/deb/src/: Dockerfile  deb-src-build.sh
packaging/xbps/: Makefile  xbps-create-amd64.sh  xbps-create-x86_64.sh  xbps-create.sh
src/: Makefile.am  def.h  logutils.c  logutils.h  main.c  pathutils.c  pathutils.h  runsearch.c  search.c  search.h  sync.c  sync.h
src/commands/: apply.c  download.c  open.c  runsearch.c  search.c  sync.c
src/commands/search/: runsearch.h  search.h
src/commands/sync/: sync.c
src/utils/: entry-utils.c  libutils.c  logutils.c  pathutils.c
